// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Weather component Should render WeatherDetail 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div>
          <div>
            DebounceSelect
            <input
              data-testid="on-search"
            />
            <input
              data-testid="on-change"
            />
          </div>
          <div
            style="width: 20%; text-align: right; display: inline-block;"
          >
            <input
              data-testid="switch-language"
            />
          </div>
        </div>
      </div>
      Divider
      <div>
        <div>
          <div>
            <div>
              WeatherDetail
            </div>
          </div>
          <div>
            <div>
              WeatherDetail
            </div>
          </div>
          <div>
            <div>
              WeatherDetail
            </div>
          </div>
          <div>
            <div>
              WeatherDetail
            </div>
          </div>
          <div>
            <div>
              WeatherDetail
            </div>
          </div>
          <div>
            <div>
              WeatherDetail
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div>
        <div>
          DebounceSelect
          <input
            data-testid="on-search"
          />
          <input
            data-testid="on-change"
          />
        </div>
        <div
          style="width: 20%; text-align: right; display: inline-block;"
        >
          <input
            data-testid="switch-language"
          />
        </div>
      </div>
    </div>
    Divider
    <div>
      <div>
        <div>
          <div>
            WeatherDetail
          </div>
        </div>
        <div>
          <div>
            WeatherDetail
          </div>
        </div>
        <div>
          <div>
            WeatherDetail
          </div>
        </div>
        <div>
          <div>
            WeatherDetail
          </div>
        </div>
        <div>
          <div>
            WeatherDetail
          </div>
        </div>
        <div>
          <div>
            WeatherDetail
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Weather component Should render default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div>
          <div>
            DebounceSelect
            <input
              data-testid="on-search"
            />
            <input
              data-testid="on-change"
            />
          </div>
          <div
            style="width: 20%; text-align: right; display: inline-block;"
          >
            <input
              data-testid="switch-language"
            />
          </div>
        </div>
      </div>
      Divider
      <div>
        <div>
          <div>
            <div>
              weatherLocationSelect
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div>
        <div>
          DebounceSelect
          <input
            data-testid="on-search"
          />
          <input
            data-testid="on-change"
          />
        </div>
        <div
          style="width: 20%; text-align: right; display: inline-block;"
        >
          <input
            data-testid="switch-language"
          />
        </div>
      </div>
    </div>
    Divider
    <div>
      <div>
        <div>
          <div>
            weatherLocationSelect
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
